# OpenGL-3D-app-template

./: .gitattributes  CMakeLists.txt  README.md  main.cpp
Shaders/: BasicFragment.glsl  BasicVertex.glsl
Source/: Application.cpp  Application.h  Camera.cpp  Camera.h  Context.cpp  Context.h  Model.cpp  Model.h
Source/Maths/: Matrix.cpp  Matrix.h  glm.h
Source/Player/: Player.cpp  Player.h
Source/Renderer/: QuadRenderer.cpp  QuadRenderer.h  RenderMaster.cpp  RenderMaster.h
Source/Shaders/: BasicShader.cpp  BasicShader.h  Shader.cpp  Shader.h  ShaderLoader.cpp  ShaderLoader.h
Source/States/: PlayingState.cpp  PlayingState.h  StateBase.h
Source/Texture/: BasicTexture.cpp  BasicTexture.h
Source/Util/: Entity.h  FileUtil.cpp  FileUtil.h  Unique.h
Source/stb_image/: stb_image.cpp
